--- a/pid.plist
+++ b/pid.plist
@@ -2,13 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NEW_BUILD</key>
-	<integer>20</integer>
-	<key>NEW_VERSION</key>
-	<string>1.0.20</string>
-	<key>OLD_BUILD</key>
-	<string>20</string>
-	<key>OLD_VERSION</key>
-	<string>1.0.20</string>
+	<key>pid1</key>
+	<integer>0</integer>
+	<key>pid2</key>
+	<integer>0</integer>
+	<key>pid3</key>
+	<integer>0</integer>
+	<key>pid4</key>
+	<integer>0</integer>
 </dict>
 </plist>
