--- a/killpid.plist
+++ b/killpid.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>pid1</key>
-	<integer>0</integer>
+	<integer>76688</integer>
 	<key>pid2</key>
-	<integer>0</integer>
+	<real>76722</real>
 	<key>pid3</key>
-	<integer>0</integer>
+	<integer>76687</integer>
 	<key>pid4</key>
-	<integer>0</integer>
+	<integer>76851</integer>
 </dict>
 </plist>
