--- a/killpid.plist
+++ b/killpid.plist
@@ -5,7 +5,7 @@
 	<key>pid1</key>
 	<integer>0</integer>
 	<key>pid2</key>
-	<real>76722</real>
+	<integer>76722</integer>
 	<key>pid3</key>
 	<integer>0</integer>
 	<key>pid4</key>
